# LearnFFmpeg

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/project/learnffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  video_player.cpp
app/src/main/cpp/common/egl_core/: egl_core.cpp  egl_core.h  egl_share_context.cpp
app/src/main/cpp/common/message_queue/: handler.h  message_queue.cpp
app/src/main/cpp/player/: video_player_controller.cpp  video_player_controller.h
app/src/main/cpp/player/audio/: audio_output.cpp  audio_output.h
app/src/main/cpp/player/decoder/: decoder_request_header.h  ffmpeg_video_decoder.cpp  ffmpeg_video_decoder.h  mediacodec_video_decoder.cpp  video_decoder.cpp  video_decoder.h
app/src/main/cpp/player/syn/: av_synchronizer.cpp  av_synchronizer.h
app/src/main/cpp/player/texture_uploader/: gpu_texture_frame_uploader.cpp  texture_frame_uploader.cpp  texture_frame_uploader.h  yuv_texture_frame_uploader.cpp
app/src/main/cpp/player/threeparty/opengl_media/circle/: circle_texture_queue.cpp  circle_texture_queue.h
app/src/main/cpp/player/threeparty/opengl_media/render/: video_gl_surface_render.cpp  video_gl_surface_render.h
app/src/main/cpp/player/threeparty/opengl_media/texture/: yuv_texture_frame.h
app/src/main/cpp/player/threeparty/opengl_media/texture_copier/: texture_frame_copier.h
app/src/main/cpp/player/threeparty/opensl_media/: opensl_es_context.cpp  opensl_es_context.h
app/src/main/cpp/player/video/: video_output.cpp  video_output.h
app/src/main/cpp/recorder/audio/: accompany_decoder.cpp  accompany_decoder.h  accompany_decoder_controller.cpp  accompany_decoder_controller.h
app/src/main/cpp/recorder/common/: packet_pool.cpp  packet_pool.h  packet_queue.cpp  packet_queue.h
app/src/main/cpp/util/: common_tools.h  ffmpeg_log.h
app/src/main/java/com/project/learnffmpeg/: MainActivity.java
app/src/main/java/com/project/learnffmpeg/decoder/: MediaCodecDecoder.java  MediaCodecDecoderLifeCycle.java
app/src/main/java/com/project/learnffmpeg/videoplayer/: OnInitializedCallback.java  OnStoppedCallback.java  VideoPlayer.java  VideoPlayerActivity.java
app/src/main/res/layout/: activity_main.xml  activity_video_player.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/project/learnffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
